<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>vda5050_tb3_adapter</name>
  <version>1.0.0</version>
  <description>VDA5050 Turtlebot 3 adapter example</description>
  <maintainer email="tbd@tbd.com">TBD</maintainer>
  <author email="leandro@inorbit.ai">Leandro Pineda</author>
  <license file="LICENSE">BSD Clause 3</license>

  <depend>vda5050_connector</depend>
  <depend>rclpy</depend>
  <depend>vda5050_msgs</depend>
  <depend>geometry_msgs</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
