<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>vda5050_template_package</name>
  <version>1.0.0</version>
  <description>VDA5050 Adapter template package.</description>
  <maintainer email="mantainer@todo.todo">mantainer</maintainer>
  <license file="LICENSE">BSD Clause 3</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_ros</buildtool_depend>

  <depend>vda5050_connector</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_action</depend>
  <depend>pluginlib</depend>

  <depend>geometry_msgs</depend>
  <depend>vda5050_msgs</depend>

  <test_depend>ament_cmake_clang_format</test_depend>
  <test_depend>ament_copyright</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
